Feature #2: writing code for sign up

--- a/Project Code/index.html
+++ b/Project Code/index.html
@@ -30,7 +30,7 @@
         <div class="logo"><a href="index1.html">MediCare</a></div>
         <div class="signin text-right">
           <a href="login.html" class="btn btn-outline-dark "> Login</a>
-          <a href="registration.html" class="btn btn-outline-dark"> Register</a>
+          <a href="signup.html" class="btn btn-outline-dark"> Register</a>
         </div>
       </div>
       <!-------logo area ends----->
