--- a/Project Code/signup.html
+++ b/Project Code/signup.html
@@ -37,21 +37,21 @@
                         <input 
                         type="text"
                         id="fullName"
-                        name="fName" 
+                        name="fullName" 
                         placeholder="Enter Name">
                         <label id="fullName__label1"></label>
 
-                        <input type="text" id="uname" placeholder="Enter Username">
+                        <input type="text" id="uname" name="uname" placeholder="Enter Username">
                         <label id="userName__label1"></label>
 
-                        <input type="email" id="uemail" placeholder="Enter Email">
+                        <input type="email" id="uemail" name="uemail" placeholder="Enter Email">
                         <label id="email__label1"></label>
 
-                        <input type="password" name="" id="upass" placeholder="Enter Password">
+                        <input type="password" name="upass" id="upass" placeholder="Enter Password">
                         <label id="upass__label1"></label>
 
-                        <input type="text"  id="uphone" placeholder="Enter Phone Number"> 
-                        <label id="uphone__label1"></label>
+                        <!-- <input type="text"  id="uphone" placeholder="Enter Phone Number"> 
+                        <label id="uphone__label1"></label> -->
 
                         
 
