Feature #2: connected to the user table

--- a/Project Code/signup.html
+++ b/Project Code/signup.html
@@ -30,7 +30,7 @@
     <section class="form">
         <div class="form-body">
                 
-                    <form action="#" onsubmit="return regValidation();" class="form-area">
+                    <form action="" onsubmit="return regValidation();" class="form-area">
                             <div class="form-header">
                                     <h3>Registration</h3>
                                 </div>
