--- a/Project Code/doctorList.html
+++ b/Project Code/doctorList.html
@@ -23,6 +23,30 @@
     <script src="js/index.js"></script>
 </head>
 <body>
-    
+    <section class="doctors">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                   <div class="row">
+                       <div class="col-md-6">
+                            <div class="doc__photo">
+                                    <img src="img/author.jpg" alt="Doctor Image">
+                                </div>
+                                
+                       </div>
+                       <div class="col-md-6">
+                            <div class="doc__info">
+                                    <h2>Dr. Abdur Rahim</h2>
+                                    <p>Specialty:</p>
+                                    <p>Degree:</p>
+                                    <button>Make Appointment</button>
+                                    <button>View Details</button>
+                                </div>
+                       </div>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
