--- a/Project Code/userProfile.html
+++ b/Project Code/userProfile.html
@@ -27,24 +27,56 @@
 <body>
     <section class="users">
         <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="userImg">
+            <div class="row mt-5 pt-5">
+                <div class="col-md-4 ">
+                    <div class="userImg text-sm-center text-center">
                         <img src="img/author.jpg" alt="user">
                         <h4>Mariah D. Chowdhory</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse ipsum earum animi consequuntur nesciunt optio eveniet architecto, molestias id repellendus?</p>
+                        <p class="lead mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse ipsum earum animi consequuntur nesciunt optio eveniet architecto, molestias id repellendus?</p>
                     </div>
                 </div>
                 <div class="col-md-8">
                     <div class="userProfile bg-light">
                         <div class="row ">
-                            <div class="col-md-12">
+                            <div class="col-md-12 ">
+                                <h4 class="aboutHeader">About</h4>
+                                
                                 <div class="userProfileInfo">
-                                    <p class="userFullName">Name: Nayeem M. Muzahid</p>
-                                    <p class="userName">User Name: Nym02</p>
-                                    <p class="userEmail">Email: Nayeemm.muzahid@gmail.com</p>
-                                    <p class="userPhone">Phone: 8801949509823</p>
-
+                                   <div class="row">
+                                       <div class="col-md-6 col-sm-6 col-6 userProfileInfoMargin1">
+                                           <div class="userProfileTag">
+                                                <p class="userFullName">Name: 
+                                                        </p>
+                                                <p class="userName">User Name:</p>
+                                                <p class="userEmail">Email </p>
+                                                <p class="userPhone">Phone: </p>
+                                                <p class="userPhone">
+                                                    Birthday:
+                                                </p>
+                                                <p class="userPhone">
+                                                    Country:
+                                                </p>
+                                           </div>
+                                       </div>
+                                       <div class="col-md-6 col-sm-6 col-6 userProfileInfoMargin2">
+                                           <div class="userProfileTagValue">
+                                                <p class="userFullName">Nayeem M. Muzahid 
+                                                    </p>
+                                            <p class="userName">Nayeem_Muzahid</p>
+                                            <p class="userEmail">Nayeemm.Muzahid@gmail.com </p>
+                                            <p class="userPhone">+8801949509823 </p>
+                                            <p class="userPhone">
+                                                    Jan 22, 1984
+                                            </p>
+                                            <p class="userPhone">
+                                                    Bangladesh
+                                                </p>
+                                           </div>
+                                       </div>
+                                   </div>
+                                   <div class="edit">
+                                        <a href="#" class="btn btn-danger editButton">Edit</a>
+                                   </div>
                                     <hr>
 
                                 </div>
